[project]
name = "ab-test-with-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=0.23.4",
    "fastapi>=0.128.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "python-multipart>=0.0.22",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "uvicorn>=0.40.0",
]
